# pss-fleet-data-api

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  alembic.ini  main.py  pss-fleet-data-api_oad_3.1.json  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  setup.cfg  test.py
.github/actions/setup/: action.yml
.github/workflows/: check-and-test.yml
alembic/: env.py
app/: __init__.py  test.py
app/src/: __init__.py  main.py
app/src/database/: __init__.py  crud.py  db.py  models.py
app/src/routers/: __init__.py  alliances.py  collections.py  upload.py  users.py
examples/: dummy_data.json  generated_dummy_data.json
open_api/: pss-fleet-data-api-1.0_oad_3.1.json
src/: alembic.ini  main.py
src/alembic/: env.py
src/alembic/versions/: 2024_07_10_1613-8b04fbfef3f7_initialize_database.py
src/api/: __init__.py  config.py  exception_handlers.py  main.py  utils.py
src/api/database/: __init__.py  crud.py  db.py  models.py
src/api/html/: home.html
src/api/models/: __init__.py  api_models.py  converters.py  endpoint.py  enums.py  error.py  exceptions.py  link.py
src/api/routers/: __init__.py  alliances.py  collections.py  dependencies.py  endpoints.py  exceptions.py  links.py  responses.py  root.py  upload.py  users.py
src/migrations/: env.py  script.py.mako
src/migrations/versions/: 2024_07_10_1613-8b04fbfef3f7_initialize_database.py  2024_07_30_1228-864bb00bc205_update_pss_user_table.py  2025_10_28_1145-fe8f12ced31a_create_calendar_hours_materialized_view.py
src/models/: __init__.py  converters.py
src/tests/10_utils/: test_add_timezone_utc.py  test_decode_alliance_membership.py  test_localize_to_utc.py  test_parse_datetime.py  test_remove_timezone.py
src/tests/30_dependencies/: test_check_is_authenticated.py
src/tests/40_database/: conftest.py  test_crud_delete_collection.py  test_crud_get_alliance_from_collection.py  test_crud_get_alliance_history.py  test_crud_get_collection.py  test_crud_get_top_100_from_collection.py  test_crud_get_user_from_collection.py  test_crud_get_user_history.py  test_crud_has_alliance_history.py  test_crud_has_collection.py  test_crud_has_collection_with_timestamp.py  test_crud_save_collection.py
src/tests/50_endpoints/: test_api_create_collection.py  test_api_delete_collection.py  test_api_get_alliance_from_collection.py  test_api_get_alliance_history.py  test_api_get_alliances_from_collection.py  test_api_get_collections.py  test_api_get_home.py  test_api_get_top_100_from_collection.py  test_api_get_user_from_collection.py  test_api_get_user_history.py  test_api_upload_collection.py  test_cases.py
src/tests/test_data/: invalid_json.txt  test_data.json  upload_test_data_schema_3.json  upload_test_data_schema_4_says_schema_9.json  upload_test_data_schema_6.json  upload_test_data_schema_9.json
tests/: conftest.py  test.sqlite
tests/01_model/converters/: conftest.py  test_collection_create_to_db.py
tests/02_database/: test_data.json
tests/02_database/crud/: conftest.py  test_get_alliance_history.py  test_get_collection.py  test_get_collections.py  test_get_top_100_from_collection.py  test_get_user_from_collection.py
tests/10_utils/: test_add_timezone_utc.py  test_convert_datetime_to_seconds.py  test_decode_alliance_membership.py  test_encode_alliance_membership.py  test_localize_to_utc.py  test_parse_datetime.py  test_remove_timezone.py
tests/20_model/converters/: test_from_db.py  test_user_create_to_db.py
tests/25_exception_handlers/: test__raise_header_parameter_error.py  test__raise_path_parameter_error copy.py  test__raise_query_parameter_error.py  test_handle_http_exception.py  test_handle_request_validation.py  test_raise_body_parameter_error.py
tests/30_dependencies/: test_check_is_authenticated.py  test_from_to_date_parameters.py
tests/40_database/: conftest.py  test_cases.py  test_cases_db.py  test_crud_get_alliance_from_collection.py  test_crud_get_alliance_history.py  test_crud_get_collection_by_timestamp.py  test_crud_get_collections.py  test_crud_get_top_100_from_collection.py  test_crud_get_user_history.py  test_crud_has_alliance_history.py  test_crud_has_user_history.py  test_crud_helpers.py  test_crud_update_collection.py
tests/50_endpoints/: conftest.py  test_api_delete_collection.py  test_api_get_alliance_from_collection.py  test_api_get_alliance_history.py  test_api_get_alliances_from_collection.py  test_api_get_collection.py  test_api_get_collections.py  test_api_get_home.py  test_api_get_ping.py  test_api_get_top_100_from_collection.py  test_api_get_user_from_collection.py  test_api_get_user_history.py  test_api_get_users_from_collection.py  test_api_post_create_collection.py  test_api_put_update_collection.py  test_api_upload_collection.py  test_cases.py
tests/crud/: conftest.py  test_delete_collection.py  test_get_alliance_from_collection.py  test_get_alliance_history.py  test_get_collection.py  test_get_collections.py
tests/database/crud/: conftest.py  test_delete_collection.py  test_get_alliance_from_collection.py  test_get_alliance_history.py  test_get_collection.py  test_get_collections.py  test_get_top_100_from_collection.py  (+3 more)
tests/test_data/: insert_test_data.json  insert_test_data_old.json  insert_test_data_updated.json  test_data.json  test_data_onMissing.json  update_test_data_schema_2.json  update_test_data_schema_3.json  update_test_data_schema_4.json  update_test_data_schema_4_says_schema_9.json  update_test_data_schema_5.json  update_test_data_schema_6.json  update_test_data_schema_7.json  update_test_data_schema_8.json  update_test_data_schema_9.json  upload_test_data_schema_2.json  upload_test_data_schema_3.json  upload_test_data_schema_4.json  upload_test_data_schema_4_says_schema_9.json  upload_test_data_schema_5.json  upload_test_data_schema_6.json  upload_test_data_schema_7.json  upload_test_data_schema_8.json  upload_test_data_schema_9.json
(+14 files in other folders)
