[project]
name = "pss-fleet-data-api"
version = "1.5.2"
license = {file = "LICENSE"}
description = "A REST API server for Pixelstarships Fleet Data"
authors = [
    { name = "The worst.", email = "theworstpss@gmail.com" }
]
dependencies = [
    "alembic>=1.18.4",
    "asyncpg>=0.31.0",
    "fastapi[standard]>=0.136.0",
    "fastapi-limiter>=0.2.0",
    "orjson>=3.11.8",
    "psycopg2-binary>=2.9.12",
    "python-dateutil>=2.9.0.post0",
    "sqlmodel>=0.0.38",
    "sqlalchemy-utils>=0.42.1",
]
readme = "README.md"
requires-python = ">= 3.12.3"

[dependency-groups]
dev = [
    "coverage>=7.13.5",
    "pre-commit>=4.6.0",
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.1.0",
    "pytest-env>=1.6.0",
    "ruff>=0.15.12",
    "vulture>=2.16",
]

[tool.autoflake]
in-place = true
remove-all-unused-imports = true
ignore-init-module-imports = true
recursive = true

[tool.black]
line-length = 150
target-version = ['py312']
include = '\.pyi?$'

[tool.flake8]
exclude = [
    "__pycache__",
    ".direnv",
    ".git",
    ".venv",
    "build",
    "dist",
]
extend-ignore = "B008,B907,B950,E501,W291"
show-source = true
statistics = true
select = "B,B9,BLK,C,E,F,W"
max-complexity = 10
max-line-length = 150

[tool.isort]
src_paths = ["src", "tests"]
profile = "black"
line_length = 150
lines_after_imports = 2

[tool.ruff]
line-length = 150
target-version = "py312"
exclude = ["__pycache__", ".direnv", ".git", ".venv", "build", "dist"]

[tool.ruff.lint]
extend-select = ["C", "B", "B9", "E", "F", "I", "W"]
extend-ignore = ["B008", "E501", "W291"]
per-file-ignores = { "__init__.py" = ["F401"] }

[tool.ruff.lint.isort]
lines-after-imports = 2

[tool.pytest.ini_options]
pythonpath = "."
testpaths = ["tests"]
python_files = ["test_*.py"]
asyncio_mode = "auto"
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::sqlalchemy.exc.SAWarning",
    "ignore::sqlalchemy.exc.SADeprecationWarning",
    "ignore::UserWarning"
]
env = [
    "ROOT_API_KEY=abcdef",
    "DATABASE_NAME=pss-fleet-data-test"
]

[tool.vulture]
min_confidence = 100
paths = ["./src/api"]
sort_by_size = true
